tests/ui/parser/keyword-final.rs
fn main() {
    let final = (); //~ ERROR expected identifier, found reserved keyword `final`
}
